@@ -9,18 +9,26 @@ import java.nio.charset.Charset;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.time.Duration;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
 import javax.json.bind.Jsonb;
 import javax.json.bind.JsonbBuilder;
 import epf.client.security.Token;
 import epf.tests.TestUtil;
+import epf.util.file.PathUtil;
 
 /**
  * @author PC
  *
  */
 public class ShellUtil {
+	
+	/**
+	 * 
+	 */
+	private static final String COMMAND = System.getProperty("epf.tests.shell.command");
 	
 	/**
 	 * 
@@ -32,7 +40,7 @@ public class ShellUtil {
 	 */
 	public static Path getShellPath() {
 		if(shellPath == null) {
-			shellPath = Path.of(System.getProperty("epf.shell.path"));
+			shellPath = PathUtil.of(System.getProperty("epf.shell.path"));
 		}
 		return shellPath;
 	}
@@ -63,7 +71,7 @@ public class ShellUtil {
 		System.out.println(String.join(" ", builder.command()));
 		final Process process = builder.start();
 		TestUtil.waitUntil(o -> process.isAlive(), Duration.ofSeconds(10));
-		Files.write(in, List.of(inputs), Charset.forName("UTF-8"));
+		Files.write(in, Arrays.asList(inputs), Charset.forName("UTF-8"));
 		process.waitFor(20, TimeUnit.SECONDS);
 		return process;
 	}
@@ -77,7 +85,7 @@ public class ShellUtil {
 	}
 	
 	public static Token securityAuth(ProcessBuilder builder, String token, Path out) throws Exception {
-		builder.command("powershell", "./epf", "security", "auth", "-t", token);
+		builder = command(builder, "./epf", "security", "auth", "-t", token);
 		Process process = ShellUtil.waitFor(builder);
 		List<String> lines = Files.readAllLines(out);
 		process.destroyForcibly();
@@ -87,8 +95,20 @@ public class ShellUtil {
 	}
 	
 	public static void securityLogout(ProcessBuilder builder, String tokenID) throws Exception {
-		builder.command("powershell", "./epf", "security", "logout", "-tid", tokenID);
+		builder = command(builder, "./epf", "security", "logout", "-tid", tokenID);
 		Process process = ShellUtil.waitFor(builder);
 		process.destroyForcibly();
+	}
+	
+	/**
+	 * @param builder
+	 * @param command
+	 * @return
+	 */
+	static ProcessBuilder command(final ProcessBuilder builder, final String...command) {
+		final List<String> cmd = new ArrayList<>();
+		cmd.add(COMMAND);
+		cmd.addAll(Arrays.asList(command));
+		return builder.command(cmd);
 	}
 }
